force-app/main/default/objects/Payment_Request__c/fields/Others__c.field-meta.xml
<CustomField>
    <fullName>Others__c</fullName>
    <label>Others</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Upkeep/refurbishment Charges</fullName>
            </value>
            <value>
                <fullName>DEWA Charges</fullName>
            </value>
            <value>
                <fullName>NOC Charges</fullName>
            </value>
            <value>
                <fullName>Late Payment Charges</fullName>
            </value>
            <value>
                <fullName>Cancellation Charges</fullName>
            </value>
            <value>
                <fullName>Cheque Dishonored Charges</fullName>
            </value>
            <value>
                <fullName>Community Management Service fees</fullName>
            </value>
            <value>
                <fullName>Title Deed Charges</fullName>
            </value>
            <value>
                <fullName>Security Deposit</fullName>
            </value>
            <value>
                <fullName>Mortgage Fees</fullName>
            </value>
            <value>
                <fullName>Resale – NOC (Title Deed)</fullName>
            </value>
            <value>
                <fullName>Resale – NOC (Off plan)</fullName>
            </value>
            <value>
                <fullName>SPA Reissuance Fees</fullName>
            </value>
            <value>
                <fullName>Ownership Change</fullName>
            </value>
            <value>
                <fullName>Pre-registration To Pre-title Deed</fullName>
            </value>
            <value>
                <fullName>Plot title Deed</fullName>
            </value>
            <value>
                <fullName>Plot Resale NOC</fullName>
            </value>
            <value>
                <fullName>Service charges</fullName>
            </value>
            <value>
                <fullName>Resale NOC (Title Deed)</fullName>
            </value>
            <value>
                <fullName>Resale NOC (Oqood)</fullName>
            </value>
            <value>
                <fullName>Title Deed Fees (Units)</fullName>
            </value>
            <value>
                <fullName>Title Deed Fees (Villas)</fullName>
            </value>
            <value>
                <fullName>Title Deed Fees (Plots)</fullName>
            </value>
            <value>
                <fullName>Mortgage Fees (Ejara)</fullName>
            </value>
            <value>
                <fullName>Mortgage Fees (Traditonal)</fullName>
            </value>
            <value>
                <fullName>SPA reissuance fees (per book)</fullName>
            </value>
            <value>
                <fullName>Name addition/deletion</fullName>
            </value>
            <value>
                <fullName>Ownership changes</fullName>
            </value>
            <value>
                <fullName>DLD Cancellation Charges</fullName>
            </value>
            <value>
                <fullName>Admin Charges (General)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>