force-app/main/default/objects/Payment_Request__c/fields/Partially_Approved_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Partially_Approved_Date_and_Time__c</fullName>
    <label>Partially Approved Date and Time</label>
    <type>DateTime</type>
</CustomField>