force-app/main/default/objects/Payment_Request__c/fields/Payment_public_link__c.field-meta.xml
<CustomField>
    <fullName>Payment_public_link__c</fullName>
    <label>Payment public link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>