force-app/main/default/objects/Payment_Request__c/fields/Payment_Transaction_Number__c.field-meta.xml
<CustomField>
    <fullName>Payment_Transaction_Number__c</fullName>
    <label>Payment Transaction Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>