force-app/main/default/objects/Payment_Request__c/fields/Payment_Transaction_Tracking_Id__c.field-meta.xml
<CustomField>
    <fullName>Payment_Transaction_Tracking_Id__c</fullName>
    <label>Payment Transaction Tracking Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>