force-app/main/default/objects/Payment_Request__c/fields/Pop_Amount__c.field-meta.xml
<CustomField>
    <fullName>Pop_Amount__c</fullName>
    <label>POP Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>