force-app/main/default/objects/Payment_Request__c/fields/PR_Update_API_status__c.field-meta.xml
<CustomField>
    <fullName>PR_Update_API_status__c</fullName>
    <label>PR Update API status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>