force-app/main/default/objects/Payment_Request__c/fields/Related_PR_Status__c.field-meta.xml
<CustomField>
    <fullName>Related_PR_Status__c</fullName>
    <formula>IF(ISNULL(Payment_Request__c) || ISBLANK(Payment_Request__c),&apos;&apos;,TEXT(Payment_Request__r.Status__c))</formula>
    <label>Related PR Status</label>
    <type>Text</type>
</CustomField>