force-app/main/default/objects/Payment_Request__c/fields/Sales_Head_in_PR__c.field-meta.xml
<CustomField>
    <fullName>Sales_Head_in_PR__c</fullName>
    <formula>New_Sale_Approval__r.Sales_Head_Value__r.FirstName  &amp;&quot; &quot;&amp; New_Sale_Approval__r.Sales_Head_Value__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Head in PR</label>
    <type>Text</type>
</CustomField>