force-app/main/default/objects/Payment_Request__c/fields/SBF_Executed_by__c.field-meta.xml
<CustomField>
    <fullName>SBF_Executed_by__c</fullName>
    <formula>Booking__r.SBF_Assigned_To__r.FirstName &amp;&quot; &quot;&amp;  Booking__r.SBF_Assigned_To__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SBF Executed by</label>
    <type>Text</type>
</CustomField>