force-app/main/default/objects/Payment_Request__c/fields/Secondary_Mode__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Mode__c</fullName>
    <label>Primary Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OTC Deposits</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>CDM Cash</fullName>
            </value>
            <value>
                <fullName>International Wire Transfer</fullName>
            </value>
            <value>
                <fullName>CDM Cheque</fullName>
            </value>
            <value>
                <fullName>Domestic Wire Transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>