force-app/main/default/objects/Payment_Request__c/fields/Share_With_MIS__c.field-meta.xml
<CustomField>
    <fullName>Share_With_MIS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Share With MIS</label>
    <type>Checkbox</type>
</CustomField>