force-app/main/default/objects/Payment_Request__c/fields/Status_Call_Response__c.field-meta.xml
<CustomField>
    <fullName>Status_Call_Response__c</fullName>
    <label>Status Call Response</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>