force-app/main/default/objects/Payment_Request__c/fields/Status_Lapse__c.field-meta.xml
<CustomField>
    <fullName>Status_Lapse__c</fullName>
    <defaultValue>&apos;Record Created&apos;</defaultValue>
    <label>Status Lapse</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>