force-app/main/default/objects/Payment_Request__c/fields/Sub_Project_from_PR__c.field-meta.xml
<CustomField>
    <fullName>Sub_Project_from_PR__c</fullName>
    <formula>Unit__r.Sub_project_tower__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub Project from PR</label>
    <type>Text</type>
</CustomField>