force-app/main/default/objects/Payment_Request__c/fields/Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Date__c</fullName>
    <label>Submitted Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>