force-app/main/default/objects/Payment_Request__c/fields/Submitter_Manager__c.field-meta.xml
<CustomField>
    <fullName>Submitter_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submitter Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Payment_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>