force-app/main/default/objects/Payment_Request__c/fields/Third_Party__c.field-meta.xml
<CustomField>
    <fullName>Third_Party__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Third Party?</label>
    <type>Checkbox</type>
</CustomField>