force-app/main/default/objects/Payment_Request__c/fields/Time_Lapse_from_New_Sale__c.field-meta.xml
<CustomField>
    <fullName>Time_Lapse_from_New_Sale__c</fullName>
    <formula>Time_lapsed_till_New_Sale_Creation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Lapse Till New Sale Submission</label>
    <type>Text</type>
</CustomField>