force-app/main/default/objects/Payment_Request__c/fields/Towards_Pre_Registration_Amount__c.field-meta.xml
<CustomField>
    <fullName>Towards_Pre_Registration_Amount__c</fullName>
    <label>Towards Pre-Registration Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>