force-app/main/default/objects/Payment_Request__c/fields/Towards_Unit_Price_Amount__c.field-meta.xml
<CustomField>
    <fullName>Towards_Unit_Price_Amount__c</fullName>
    <label>Towards Unit Price Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>