force-app/main/default/objects/Payment_Request__c/fields/Treasury_Status__c.field-meta.xml
<CustomField>
    <fullName>Treasury_Status__c</fullName>
    <label>Treasury Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending with Treasury</fullName>
            </value>
            <value>
                <fullName>Approved by Treasury</fullName>
            </value>
            <value>
                <fullName>Rejected/Assign back to Accounts</fullName>
            </value>
            <value>
                <fullName>Approved by Accounts</fullName>
                <isActive>false</isActive>
                <label>Approved by Accounts</label>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
            <value>
                <fullName>Rejected by Accounts</fullName>
                <isActive>false</isActive>
                <label>Rejected by Accounts</label>
            </value>
            <value>
                <fullName>Update In Progress</fullName>
                <isActive>false</isActive>
                <label>Update In Progress</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>