force-app/main/default/objects/Payment_Request__c/fields/Type_of_Enquiry__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Enquiry__c</fullName>
    <label>Type of Enquiry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Indirect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>