force-app/main/default/objects/Payment_Request__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2 AND 5) OR (1 AND 2 AND 3 AND 4) OR (6 AND 2 AND 3 AND 4)</booleanFilter>
        <filterItems>
            <field>Unit__c.Unit_Status__c</field>
            <operation>equals</operation>
            <value>Available</value>
        </filterItems>
        <filterItems>
            <field>Unit__c.Not_Available_for_Sales__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <filterItems>
            <field>$User.Id</field>
            <operation>equals</operation>
            <valueField>Unit__c.Allocated_SM__r.Id</valueField>
        </filterItems>
        <filterItems>
            <field>Unit__c.Unit_Status__c</field>
            <operation>notEqual</operation>
            <value>Unreleased</value>
        </filterItems>
        <filterItems>
            <field>Unit__c.Allocated_SM__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>Unit__c.Unit_Status__c</field>
            <operation>equals</operation>
            <value>Hold</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Payment Requests</relationshipLabel>
    <relationshipName>Payment_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>