force-app/main/default/objects/Payment_Request__c/fields/Unit_Purchase_Amount__c.field-meta.xml
<CustomField>
    <fullName>Unit_Purchase_Amount__c</fullName>
    <formula>Unit__r.Puchase_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Purchase Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>