force-app/main/default/objects/Payment_Request__c/fields/VP_For_PR__c.field-meta.xml
<CustomField>
    <fullName>VP_For_PR__c</fullName>
    <label>VP For PR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>