force-app/main/default/objects/Payment_Request__c/fields/Website_Payment_Unit_Blocking_Status__c.field-meta.xml
<CustomField>
    <fullName>Website_Payment_Unit_Blocking_Status__c</fullName>
    <label>Website Payment Unit Blocking Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unit blocked by another unit, eligible for refund</fullName>
            </value>
            <value>
                <fullName>Successfully completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>