force-app/main/default/objects/Payment_Request__c/fields/X1st_Level_Approved__c.field-meta.xml
<CustomField>
    <fullName>X1st_Level_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>1st Level Approved</label>
    <type>Checkbox</type>
</CustomField>