force-app/main/default/objects/Payment_Request__c/fields/X3rd_Party_IWT__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_IWT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>3rd Party IWT</label>
    <type>Checkbox</type>
</CustomField>