force-app/main/default/objects/Payment_Request__c/fields/X3rd_Party_payment__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_payment__c</fullName>
    <label>3rd Party Name</label>
    <type>TextArea</type>
</CustomField>