force-app/main/default/objects/Payment_Request__c/recordTypes/Collection.recordType-meta.xml
<RecordType>
    <fullName>Collection</fullName>
    <active>true</active>
    <description>For Collection without OTC Deposit</description>
    <label>Collection</label>
</RecordType>