force-app/main/default/objects/Payment_Request__c/validationRules/Allocated_SM_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Allocated_SM_check</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW()  &amp;&amp;   NOT(ISBLANK(Unit__r.Allocated_SM__c)) &amp;&amp;  Unit__r.Allocated_SM__c &lt;&gt; $User.Id &amp;&amp; NOT(CONTAINS($Profile.Name,&apos;Collection&apos;)) &amp;&amp; NOT(CONTAINS($Profile.Name,&apos;CRM&apos;)) &amp;&amp;
NOT(CONTAINS($Profile.Name,&apos;System Administrator&apos;))</errorConditionFormula>
    <errorMessage>Payment Request can be created by Allocated SM only</errorMessage>
</ValidationRule>