force-app/main/default/objects/Payment_Request__c/validationRules/Mode_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Mode_Validation</fullName>
    <active>true</active>
    <description>This is for Treasury profile to restrict the access</description>
    <errorConditionFormula>AND(ISCHANGED(Mode__c),
CONTAINS($Profile.Name,&apos;Treasury&apos;))</errorConditionFormula>
    <errorMessage>You dont have access to change this value. Please contact SF Admin</errorMessage>
</ValidationRule>