force-app/main/default/objects/Payment_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Unit__c</columns>
    <columns>Booking__c</columns>
    <columns>Name__c</columns>
    <columns>Amount__c</columns>
    <columns>Status__c</columns>
    <columns>Mode_Option__c</columns>
    <columns>Mode__c</columns>
    <columns>New_Sale_Approval__c</columns>
    <columns>Towards_Pre_Registration_Amount__c</columns>
    <columns>Towards_Unit_Price_Amount__c</columns>
    <columns>Amount_Allocated__c</columns>
    <columns>Tower_Name__c</columns>
    <columns>Account_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>