force-app/main/default/objects/Payment_Request__c/listViews/Approved_PR_Not_Allocated.listView-meta.xml
<ListView>
    <fullName>Approved_PR_Not_Allocated</fullName>
    <columns>NAME</columns>
    <columns>Payment_Request__c</columns>
    <columns>Booking__c</columns>
    <columns>Name__c</columns>
    <columns>Amount__c</columns>
    <columns>Status__c</columns>
    <columns>Mode__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Receipt_Created__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Submitted to Accounts for Amount Confirmation</value>
    </filters>
    <filters>
        <field>Mode__c</field>
        <operation>equals</operation>
        <value>International Wire Transfer,IWT(International),Domestic Wire Transfer</value>
    </filters>
    <filters>
        <field>Booking__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Mode_Option__c</field>
        <operation>equals</operation>
        <value>Multi Mode</value>
    </filters>
    <label>Approved PR Not Allocated</label>
</ListView>