force-app/main/default/objects/Payment_Request__c/listViews/Collection_PR_approved_by_Accounts.listView-meta.xml
<ListView>
    <fullName>Collection_PR_approved_by_Accounts</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Unit__c</columns>
    <columns>Mode__c</columns>
    <columns>Mode_Option__c</columns>
    <columns>Currency__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status_Lapse__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approved by Accounts,Approved</value>
    </filters>
    <label>Collection -PR approved by Accounts</label>
    <sharedTo>
        <role>Collection</role>
    </sharedTo>
</ListView>