force-app/main/default/objects/Payment_Request__c/listViews/Collection_Today_s_Payment_Request.listView-meta.xml
<ListView>
    <fullName>Collection_Today_s_Payment_Request</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Unit__c</columns>
    <columns>Mode__c</columns>
    <columns>Mode_Option__c</columns>
    <columns>Currency__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status_Lapse__c</columns>
    <filterScope>Everything</filterScope>
    <label>Collection - Today&apos;s Payment Request</label>
    <sharedTo>
        <role>Collection</role>
    </sharedTo>
</ListView>