force-app/main/default/objects/Payment_Request__c/listViews/Mall_Stands.listView-meta.xml
<ListView>
    <fullName>Mall_Stands</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Unit_Name__c</columns>
    <columns>Unit__c</columns>
    <columns>Amount__c</columns>
    <columns>Name__c</columns>
    <columns>Status__c</columns>
    <columns>Mode__c</columns>
    <columns>Towards_Pre_Registration_Amount__c</columns>
    <columns>Towards_Unit_Price_Amount__c</columns>
    <columns>Amount_Allocated__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Tower_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Lead_Source_Sub_Category__c</field>
        <operation>equals</operation>
        <value>Mall Stands</value>
    </filters>
    <filters>
        <field>Booking__c</field>
        <operation>equals</operation>
    </filters>
    <label>Mall Stands</label>
    <sharedTo>
        <role>Head_Channel_Relations</role>
    </sharedTo>
</ListView>