force-app/main/default/objects/Payment_Request__c/listViews/Manoj_Team.listView-meta.xml
<ListView>
    <fullName>Manoj_Team</fullName>
    <booleanFilter>(1 OR 3) AND 2</booleanFilter>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Tower_Name__c</columns>
    <columns>Unit__c</columns>
    <columns>Amount__c</columns>
    <columns>Name__c</columns>
    <columns>Status__c</columns>
    <columns>Mode__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Sales_Head_in_PR__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>VP_For_PR__c</field>
        <operation>equals</operation>
        <value>Manoj Vidhani</value>
    </filters>
    <filters>
        <field>Booking__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>PR_VP__c</field>
        <operation>equals</operation>
        <value>Manoj Vidhani</value>
    </filters>
    <label>Manoj Team</label>
    <sharedTo>
        <role>Head_Channel_Relations</role>
        <role>Vice_President_5</role>
    </sharedTo>
</ListView>